feat: add batch processor and data events
